--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your name"
+  name             : "Amanda Gu"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
   location         : "Somewhere"
