Side panel name+bio (last one worked)

--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 author:
   name             : "Amanda Gu"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  bio              : "Welcome to my e-home."
   location         : "Somewhere"
   email            :
   links:
