Side panel w accent

--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ author:
   name             : "Amanda Gu"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Welcome to my e-home."
-  location         : "Whistler | Montreal"
+  location         : "Whistler | Montréal"
   email            :
   links:
     - label: "Email"
