Editing title (last one worked)

--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Amanda Gu"
+title                    : "Amanda's Quarter Life Crisis"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Amanda Gu"
+subtitle                 : "A travel, math, and book blog."
+name                     : "Amanda's Blog'"
 description              : "A travel, math, and book blog."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
