--- a/_config.yml
+++ b/_config.yml
@@ -16,17 +16,17 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Amanda's Quarter Life Crisis"
+title                    : "Amanda Gu"
 title_separator          : "-"
 subtitle                 : "A travel, math, and book blog."
-name                     : "Amanda's Blog'"
+name                     : "Amanda Gu"
 description              : "A travel, math, and book blog."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+url                      : "https://amandagu.github.io/"
+baseurl                  : ""
+repository               : "amandagu/amandagu.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+masthead_title           : "Amanda's 's Quarter Life Crisis"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
