--- a/_config.yml
+++ b/_config.yml
@@ -297,3 +297,6 @@ defaults:
     values:
       layout: single
       author_profile: true
+      read_time: false
+      share: false
+      related: false
