--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ reCaptcha:
   secret                 :
 atom_feed:
   path                   : # blank (default) uses feed.xml
-  hide                   : # true, false (default)
+  hide                   : true
 search                   : # true, false (default)
 search_full_content      : # true, false (default)
 search_provider          : # lunr (default), algolia, google
@@ -103,7 +103,7 @@ analytics:
 # Site Author
 author:
   name             : "Amanda Gu"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/headshot.jpg"
   bio              : "Welcome to my e-home."
   location         : "Whistler | Montréal"
   email            :
